versions/v3.6.0/doxygen/html/structnet__stats__wifi.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/structnet__stats__wifi.html
original_path: doxygen/html/structnet__stats__wifi.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

net\_stats\_wifi Struct Reference

[Connectivity](group__connectivity.md) » [Networking](group__networking.md) » [Network Statistics Library](group__net__stats.md)

All Wi-Fi specific statistics.
[More...](#details)

`#include <[net_stats.h](net__stats_8h_source.md)>`

| Data Fields | |
| --- | --- |
| struct [net\_stats\_sta\_mgmt](structnet__stats__sta__mgmt.md) | [sta\_mgmt](#a8bee22961545674e6ab100b58a04bf91) |
| struct [net\_stats\_bytes](structnet__stats__bytes.md) | [bytes](#aa055b1e8bd8f1e50815c1028b562be07) |
| struct [net\_stats\_pkts](structnet__stats__pkts.md) | [pkts](#adbcdb2dd8733f2917c00a0b2d365393b) |
| struct [net\_stats\_pkts](structnet__stats__pkts.md) | [broadcast](#a03dc04638c4b670bd7f3520d45fc1eda) |
| struct [net\_stats\_pkts](structnet__stats__pkts.md) | [multicast](#a7e7f68215101885fd51c70e981da26e7) |
| struct [net\_stats\_pkts](structnet__stats__pkts.md) | [errors](#ae0149e64a94a9f96eb6680f94793c8c4) |

## Detailed Description

All Wi-Fi specific statistics.

## Field Documentation

## [◆ ](#a03dc04638c4b670bd7f3520d45fc1eda)broadcast

| struct [net\_stats\_pkts](structnet__stats__pkts.md) net\_stats\_wifi::broadcast |
| --- |

## [◆ ](#aa055b1e8bd8f1e50815c1028b562be07)bytes

| struct [net\_stats\_bytes](structnet__stats__bytes.md) net\_stats\_wifi::bytes |
| --- |

## [◆ ](#ae0149e64a94a9f96eb6680f94793c8c4)errors

| struct [net\_stats\_pkts](structnet__stats__pkts.md) net\_stats\_wifi::errors |
| --- |

## [◆ ](#a7e7f68215101885fd51c70e981da26e7)multicast

| struct [net\_stats\_pkts](structnet__stats__pkts.md) net\_stats\_wifi::multicast |
| --- |

## [◆ ](#adbcdb2dd8733f2917c00a0b2d365393b)pkts

| struct [net\_stats\_pkts](structnet__stats__pkts.md) net\_stats\_wifi::pkts |
| --- |

## [◆ ](#a8bee22961545674e6ab100b58a04bf91)sta\_mgmt

| struct [net\_stats\_sta\_mgmt](structnet__stats__sta__mgmt.md) net\_stats\_wifi::sta\_mgmt |
| --- |

---

The documentation for this struct was generated from the following file:

- zephyr/net/[net\_stats.h](net__stats_8h_source.md)

- [net\_stats\_wifi](structnet__stats__wifi.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
